Scrollbar bug

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -68,11 +68,9 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  // max-height: 100vh;
-  scrollbar-width: none;
-  // scrollbar-width: 10px;
+  max-height: none;
   box-sizing: border-box;
-  overflow-x: hidden;
+  overflow: hidden;
   
   background: $background-color;
   background: $background-1;
